# alignments

./: .gitignore  README.md  before_release.md  make_archives.py  pyproject.toml  requirements.txt  setup.py  test_g2p.py
alignments/: __init__.py  dataset.py
alignments/aligners/: abstract.py  exceptions.py  mfa.py
alignments/datasets/: abstract.py  directory_dataset.py  exceptions.py  huggingface_dataset.py  librispeech.py  libritts.py
src/: alignments.py  dataset.py  test.py
src/datasets/: libritts.py
tests/: test_alignment.json  test_mfa.py
