[project]
name = "alignments"
version = "0.0.4"
description = ""
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = [
    "click>=8.0.4",
    "rich>=10.11.0",
    "torch>=1.4.0",
    "numpy>=1.19.5",
    "tqdm>=4.64.0",
    "textgrid>=1.5",
]
requires-python = ">=3.6"
license-expression = "MIT"

[project.urls]
homepage = "https://github.com/MiniXC/alignments"

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
