[project]
name = "alignments"
version = "1.0.0a1"
description = "A library for aligning audio and text"
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = [
    "descript-audio-codec>=1.0.0",
    "datasets>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "montreal-forced-aligner==3.0.0a8",
    "numpy>=1.24.0",
    "tqdm>=4.0.0",
    "tgt>=1.5",
    "pgvector>=0.2.0",
]
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/MiniXC/alignments"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
